--- a/style/media.css
+++ b/style/media.css
@@ -20,6 +20,9 @@
 }
 
 @media (max-width: 920px) {
+    .row {
+        margin: 0;
+    }
     .header {
         margin-bottom: 0;
         position: relative;
@@ -94,3 +97,29 @@
         width: unset;
     }
 }
+
+@media (max-width: 320px) {
+    .container {
+        max-width: 100%;
+        padding: 0;
+    }
+    .inner-box, .inner-button {
+        display: none;
+    }
+    .bitmap-info {
+        top: 380px;
+    }
+    .bitmap-info {
+        display: none;
+    }
+    .bitmap:not(:first-child) {
+        margin-top: 60px;
+    }
+    .pagination {
+        margin-top: 80px;
+    }
+}
+
+
+
+
